# markovsolver4safety

./: .gitignore  CITATION.cff  Dockerfile  README.md  launch_markov_app.py  pyproject.toml  requirements-dev.txt
src/api/: markovsolver_api.py
src/markovsolver/: __init_.py  markovsolver.py
tests/: test_degraded_system.py  test_load_sharing_system.py  test_standby_system_1.py  test_standby_system_2.py  test_standby_system_3.py  test_standby_system_4.py  test_three_state_devices.py
tests/api/: test_markovsolver_api.py
